test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_function_call_one_arg.draco
proc main() void : a := func(1); corp;

