test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_readln_as_identifier.draco
int readln;
 
proc main() void : a := 1; corp;
